--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 /* General Navbar Styles */
 nav {
-  background-color: #2c3e50;
+  background-color: #155d38; /* Updated color */
   padding: 15px 0;
   position: sticky;
   top: 0;
@@ -61,7 +61,7 @@ nav .menu a:hover {
 
 .hamburger-icon {
   font-size: 30px;
-  color: #ecf0f1;
+  color: #ecf0f1; /* White color for the icon */
 }
 
 /* Responsive Navbar */
@@ -72,7 +72,7 @@ nav .menu a:hover {
     right: -100%;
     height: 100%;
     width: 250px;
-    background-color: #2c3e50;
+    background-color: #155d38; /* Updated color */
     flex-direction: column;
     align-items: flex-start;
     padding: 50px 20px;
